header icons with hover

--- a/index.html
+++ b/index.html
@@ -39,11 +39,19 @@
 <!-- Связь с нами -->
         <ul class="connect-us">
             <li class="connect-item">
-                <a class="connect-link list-link" href="maito:info@devstudio.com" lang="en">info@devstudio.com
+                <a class="connect-link list-link" href="maito:info@devstudio.com" lang="en">
+                    <svg class="header-icons">
+                    <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                </svg>
+                info@devstudio.com
                 </a>
             </li>
             <li class="connect-item">
-                <a class="connect-link list-link" href="tel:+380961111111">+38 096 111 11 11
+                <a class="connect-link list-link" href="tel:+380961111111">
+                    <svg class="header-icons">
+                    <use href="./images/symbol-defs.svg#icon-phone"></use>
+                </svg>
+                +38 096 111 11 11
                 </a>
             </li>
         </ul>
