--- a/portfolio.html
+++ b/portfolio.html
@@ -155,7 +155,7 @@
         </p>
         <a class="contact-list" href="mailto:info@example.com" lang="en">info@example.com
         </a>
-        <div class="break-in">
+        <div class="beak-in">
         <a class="contact-list" href="tel:+380991111111">+38 099 111 11 11
         </a>
         </div>
