Placing icons on studio and portfolio pages

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <li class="connect-item">
                 <a class="connect-link list-link" href="tel:+380961111111">
                     <svg class="header-icons">
-                    <use href="./images/symbol-defs.svg#icon-phone"></use>
+                    <use href="./images/symbol-defs.svg#icon-smartphone"></use>
                 </svg>
                 +38 096 111 11 11
                 </a>
@@ -71,6 +71,28 @@
 <!-- Особенности -->
     <section class="specials">
         <div class="container">
+            <div class="specials-icons">
+                <div class="icon-place">
+                    <svg class="item-icon">
+                        <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                    </svg>
+                </div>
+                <div class="icon-place">
+                    <svg class="item-icon">
+                        <use href="./images/symbol-defs.svg#icon-clock"></use>
+                    </svg>
+                </div>
+                <div class="icon-place">
+                    <svg class="item-icon">
+                        <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                    </svg>
+                </div>
+                <div class="icon-place">
+                    <svg class="item-icon">
+                        <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                    </svg>
+                </div>
+            </div>
         <ul class="specials-list">
             <li class="specials-item">
                 <h3 class="specials-heading">
@@ -143,6 +165,38 @@
                     Product designer
                 </p>
                 </div>
+                <div class="social-networks">
+                    <ul class="networks-list list">
+                        <li class="networks-item">
+                            <a class="networks-link" href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank">
+                                <svg class="networks-icon">
+                                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="networks-item">
+                            <a class="networks-link" href="https://www.twitter.com/" rel="noopener noreferrer" target="_blank">
+                                <svg class="networks-icon">
+                                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="networks-item">
+                            <a class="networks-link" href="https://www.facebook.com/" rel="noopener noreferrer" target="_blank">
+                                <svg class="networks-icon">
+                                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="networks-item">
+                            <a class="networks-link" href="https://www.linkedin.com/" rel="noopener noreferrer" target="_blank">
+                                <svg class="networks-icon">
+                                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </li>
             <li class="team-list">
                 <img src="./images/olga.jpg" alt="Ольга Репина" width="270"/>
@@ -153,6 +207,38 @@
                 <p class="position" lang="en">
                     Frontend developer
                 </p>
+                </div>
+                <div class="social-networks">
+                    <ul class="networks-list list">
+                        <li class="networks-item">
+                            <a class="networks-link" href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank">
+                                <svg class="networks-icon">
+                                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="networks-item">
+                            <a class="networks-link" href="https://www.twitter.com/" rel="noopener noreferrer" target="_blank">
+                                <svg class="networks-icon">
+                                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="networks-item">
+                            <a class="networks-link" href="https://www.facebook.com/" rel="noopener noreferrer" target="_blank">
+                                <svg class="networks-icon">
+                                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="networks-item">
+                            <a class="networks-link" href="https://www.linkedin.com/" rel="noopener noreferrer" target="_blank">
+                                <svg class="networks-icon">
+                                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </li>
             <li class="team-list">
@@ -165,6 +251,38 @@
                     Marketing
                 </p>
                 </div>
+                <div class="social-networks">
+                    <ul class="networks-list list">
+                        <li class="networks-item">
+                            <a class="networks-link" href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank">
+                                <svg class="networks-icon">
+                                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="networks-item">
+                            <a class="networks-link" href="https://www.twitter.com/" rel="noopener noreferrer" target="_blank">
+                                <svg class="networks-icon">
+                                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="networks-item">
+                            <a class="networks-link" href="https://www.facebook.com/" rel="noopener noreferrer" target="_blank">
+                                <svg class="networks-icon">
+                                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="networks-item">
+                            <a class="networks-link" href="https://www.linkedin.com/" rel="noopener noreferrer" target="_blank">
+                                <svg class="networks-icon">
+                                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </li>
             <li class="team-list">
                 <img src="./images/mikhail.jpg" alt="Михаил Ермаков" width="270"/>
@@ -176,29 +294,148 @@
                     UI Designer
                 </p>
                 </div>
+                <div class="social-networks">
+                    <ul class="networks-list list">
+                        <li class="networks-item">
+                            <a class="networks-link" href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank">
+                                <svg class="networks-icon">
+                                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="networks-item">
+                            <a class="networks-link" href="https://www.twitter.com/" rel="noopener noreferrer" target="_blank">
+                                <svg class="networks-icon">
+                                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="networks-item">
+                            <a class="networks-link" href="https://www.facebook.com/" rel="noopener noreferrer" target="_blank">
+                                <svg class="networks-icon">
+                                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="networks-item">
+                            <a class="networks-link" href="https://www.linkedin.com/" rel="noopener noreferrer" target="_blank">
+                                <svg class="networks-icon">
+                                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </li>
         </ul>
+        </div>
+    </section>
+    <section class="costumers">
+        <div class="container">
+            <p class="regular-costumers">
+                Постоянные клиенты
+            </p>
+            <ul class="costumers-list list">
+                <li class="costumer-item">
+                    <a href="" class="costumer-link">
+                        <svg class="costumer-icon">
+                            <use href="./images/symbol-defs.svg#icon-union-group"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="costumer-item">
+                    <a href="" class="costumer-link">
+                        <svg class="costumer-icon">
+                            <use href="./images/symbol-defs.svg#icon-company"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="costumer-item">
+                    <a href="" class="costumer-link">
+                        <svg class="costumer-icon">
+                            <use href="./images/symbol-defs.svg#icon-company-1"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="costumer-item">
+                    <a href="" class="costumer-link">
+                        <svg class="costumer-icon">
+                            <use href="./images/symbol-defs.svg#icon-foster-peters"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="costumer-item">
+                    <a href="" class="costumer-link">
+                    <svg class="costumer-icon">
+                        <use href="./images/symbol-defs.svg#icon-brand"></use>
+                    </svg>
+                </a></li>
+                <li class="costumer-item">
+                    <a href="" class="costumer-link">
+                        <svg class="costumer-icon">
+                            <use href="./images/symbol-defs.svg#icon-company-tagline"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
         </div>
     </section>
   </main>
 <!-- Подвал     -->
 <footer class="footer lists links">
-    <div class="footer-contacts container">
-        <a class="footer-logo" href="./index.html" lang="en">
-            <span class="accent-color">Web</span><span class="logo-alt">Studio</span>
-        </a>
+    <div class="container">
+     <div class="footer-contacts footer-container">
         <address class="address">
-            <p class="location">
-                г. Киев, пр-т Леси Украинки, 26.
-            </p>
-            <a class="contact-list" href="mailto:info@example.com" lang="en">info@example.com
+            <a class="footer-logo" href="./index.html" lang="en">
+                <span class="accent-color">Web</span><span class="logo-alt">Studio</span>
             </a>
-            <div class="break-in">
-                <a class="contact-list" href="tel:+380991111111">+38 099 111 11 11
-                </a>
-            </div>
+            <p class="location">
+                г. Киев, пр-т Леси Украинки, 26
+            </p>
+        <ul class="footer-contact-list list">
+            <li class="footer-item">
+                <a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="footer-item">
+                <a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+        </ul>
         </address>
-    </div>   
+        <div class="footer-social-networks">
+            <p class="social-title">ПРИСОЕДИНЯЙТЕСЬ</p>
+            <ul class="footer-net-list list">
+                <li class="footer-list-item">
+                    <a class="footer-net-link" href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank">
+                        <svg class="footer-net-icon">
+                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-list-item">
+                    <a class="footer-net-link" href="https://www.twitter.com/" rel="noopener noreferrer" target="_blank">
+                        <svg class="footer-net-icon">
+                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-list-item">
+                    <a class="footer-net-link" href="https://www.facebook.com/" rel="noopener noreferrer" target="_blank">
+                        <svg class="footer-net-icon">
+                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-list-item">
+                    <a class="footer-net-link" href="https://www.linkedin.com/" rel="noopener noreferrer" target="_blank">
+                        <svg class="footer-net-icon">
+                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
+     </div>
+    </div>
 </footer>
 </body>
 </html>
