--- a/portfolio.html
+++ b/portfolio.html
@@ -38,18 +38,25 @@
                 </ul>
             </nav>
             <!-- Связь с нами -->
-    
-            <ul class="connect-us">
-                <li class="connect-item">
-                    <a class="connect-link list-link" href="maito:info@devstudio.com" lang="en">info@devstudio.com
-                    </a>
-                </li>
-                <li class="connect-item">
-                    <a class="connect-link list-link" href="tel:+380961111111">+38 096 111 11 11
-                    </a>
-                </li>
-            </ul>
-        </div>
+    <ul class="connect-us">
+        <li class="connect-item">
+            <a class="connect-link list-link" href="maito:info@devstudio.com" lang="en">
+                <svg class="header-icons">
+                    <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                </svg>
+                info@devstudio.com
+            </a>
+        </li>
+        <li class="connect-item">
+            <a class="connect-link list-link" href="tel:+380961111111">
+                <svg class="header-icons">
+                    <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                </svg>
+                +38 096 111 11 11
+            </a>
+        </li>
+    </ul>
+    </div>
     </header>
     <!-- Навигация по проектам -->
  <main class="links lists">
@@ -145,22 +152,64 @@
  </main>
     <!-- Подвал -->
 <footer class="footer lists links">
-    <div class="footer-contacts container">
-    <a class="footer-logo" href="./index.html" lang="en">
-    <span class="accent-color">Web</span><span class="logo-alt">Studio</span>
-    </a>
-    <address class="address">
-        <p class="location">
-            г. Киев, пр-т Леси Украинки, 26.
-        </p>
-        <a class="contact-list" href="mailto:info@example.com" lang="en">info@example.com
-        </a>
-        <div class="beak-in">
-        <a class="contact-list" href="tel:+380991111111">+38 099 111 11 11
-        </a>
+    <div class="container">
+        <div class="footer-contacts footer-container">
+            <address class="address">
+                <a class="footer-logo" href="./index.html" lang="en">
+                    <span class="accent-color">Web</span><span class="logo-alt">Studio</span>
+                </a>
+                <p class="location">
+                    г. Киев, пр-т Леси Украинки, 26
+                </p>
+                <ul class="footer-contact-list list">
+                    <li class="footer-item">
+                        <a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class="footer-item">
+                        <a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+            <div class="footer-social-networks">
+                <p class="social-title">ПРИСОЕДИНЯЙТЕСЬ</p>
+                <ul class="footer-net-list list">
+                    <li class="footer-list-item">
+                        <a class="footer-net-link" href="https://www.instagram.com/" rel="noopener noreferrer"
+                            target="_blank">
+                            <svg class="footer-net-icon">
+                                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-list-item">
+                        <a class="footer-net-link" href="https://www.twitter.com/" rel="noopener noreferrer"
+                            target="_blank">
+                            <svg class="footer-net-icon">
+                                <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-list-item">
+                        <a class="footer-net-link" href="https://www.facebook.com/" rel="noopener noreferrer"
+                            target="_blank">
+                            <svg class="footer-net-icon">
+                                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-list-item">
+                        <a class="footer-net-link" href="https://www.linkedin.com/" rel="noopener noreferrer"
+                            target="_blank">
+                            <svg class="footer-net-icon">
+                                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </address>
     </div>
 </footer>
 </body>
+
 </html>
