--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <li class="connect-item">
                 <a class="connect-link list-link" href="maito:info@devstudio.com" lang="en">
                     <svg class="header-icons">
-                    <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                    <use href="./images/icons.svg#icon-envelope"></use>
                 </svg>
                 info@devstudio.com
                 </a>
@@ -49,7 +49,7 @@
             <li class="connect-item">
                 <a class="connect-link list-link" href="tel:+380961111111">
                     <svg class="header-icons">
-                    <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                    <use href="./images/icons.svg#icon-smartphone"></use>
                 </svg>
                 +38 096 111 11 11
                 </a>
@@ -74,22 +74,22 @@
             <div class="specials-icons">
                 <div class="icon-place">
                     <svg class="item-icon">
-                        <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                        <use href="./images/icons.svg#icon-antenna"></use>
                     </svg>
                 </div>
                 <div class="icon-place">
                     <svg class="item-icon">
-                        <use href="./images/symbol-defs.svg#icon-clock"></use>
+                        <use href="./images/icons.svg#icon-clock"></use>
                     </svg>
                 </div>
                 <div class="icon-place">
                     <svg class="item-icon">
-                        <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                        <use href="./images/icons.svg#icon-diagram"></use>
                     </svg>
                 </div>
                 <div class="icon-place">
                     <svg class="item-icon">
-                        <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                        <use href="./images/icons.svg#icon-astronaut"></use>
                     </svg>
                 </div>
             </div>
@@ -170,28 +170,28 @@
                         <li class="networks-item">
                             <a class="networks-link" href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank">
                                 <svg class="networks-icon">
-                                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                    <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="networks-item">
                             <a class="networks-link" href="https://www.twitter.com/" rel="noopener noreferrer" target="_blank">
                                 <svg class="networks-icon">
-                                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                    <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="networks-item">
                             <a class="networks-link" href="https://www.facebook.com/" rel="noopener noreferrer" target="_blank">
                                 <svg class="networks-icon">
-                                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                    <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="networks-item">
                             <a class="networks-link" href="https://www.linkedin.com/" rel="noopener noreferrer" target="_blank">
                                 <svg class="networks-icon">
-                                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -213,28 +213,28 @@
                         <li class="networks-item">
                             <a class="networks-link" href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank">
                                 <svg class="networks-icon">
-                                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                    <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="networks-item">
                             <a class="networks-link" href="https://www.twitter.com/" rel="noopener noreferrer" target="_blank">
                                 <svg class="networks-icon">
-                                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                    <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="networks-item">
                             <a class="networks-link" href="https://www.facebook.com/" rel="noopener noreferrer" target="_blank">
                                 <svg class="networks-icon">
-                                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                    <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="networks-item">
                             <a class="networks-link" href="https://www.linkedin.com/" rel="noopener noreferrer" target="_blank">
                                 <svg class="networks-icon">
-                                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -256,28 +256,28 @@
                         <li class="networks-item">
                             <a class="networks-link" href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank">
                                 <svg class="networks-icon">
-                                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                    <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="networks-item">
                             <a class="networks-link" href="https://www.twitter.com/" rel="noopener noreferrer" target="_blank">
                                 <svg class="networks-icon">
-                                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                    <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="networks-item">
                             <a class="networks-link" href="https://www.facebook.com/" rel="noopener noreferrer" target="_blank">
                                 <svg class="networks-icon">
-                                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                    <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="networks-item">
                             <a class="networks-link" href="https://www.linkedin.com/" rel="noopener noreferrer" target="_blank">
                                 <svg class="networks-icon">
-                                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -299,28 +299,28 @@
                         <li class="networks-item">
                             <a class="networks-link" href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank">
                                 <svg class="networks-icon">
-                                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                    <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="networks-item">
                             <a class="networks-link" href="https://www.twitter.com/" rel="noopener noreferrer" target="_blank">
                                 <svg class="networks-icon">
-                                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                    <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="networks-item">
                             <a class="networks-link" href="https://www.facebook.com/" rel="noopener noreferrer" target="_blank">
                                 <svg class="networks-icon">
-                                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                    <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="networks-item">
                             <a class="networks-link" href="https://www.linkedin.com/" rel="noopener noreferrer" target="_blank">
                                 <svg class="networks-icon">
-                                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -339,41 +339,41 @@
                 <li class="costumer-item">
                     <a href="" class="costumer-link">
                         <svg class="costumer-icon">
-                            <use href="./images/symbol-defs.svg#icon-union-group"></use>
+                            <use href="./images/icons.svg#icon-union-group"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="costumer-item">
                     <a href="" class="costumer-link">
                         <svg class="costumer-icon">
-                            <use href="./images/symbol-defs.svg#icon-company"></use>
+                            <use href="./images/icons.svg#icon-company"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="costumer-item">
                     <a href="" class="costumer-link">
                         <svg class="costumer-icon">
-                            <use href="./images/symbol-defs.svg#icon-company-1"></use>
+                            <use href="./images/icons.svg#icon-company-1"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="costumer-item">
                     <a href="" class="costumer-link">
                         <svg class="costumer-icon">
-                            <use href="./images/symbol-defs.svg#icon-foster-peters"></use>
+                            <use href="./images/icons.svg#icon-foster-peters"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="costumer-item">
                     <a href="" class="costumer-link">
                     <svg class="costumer-icon">
-                        <use href="./images/symbol-defs.svg#icon-brand"></use>
+                        <use href="./images/icons.svg#icon-brand"></use>
                     </svg>
                 </a></li>
                 <li class="costumer-item">
                     <a href="" class="costumer-link">
                         <svg class="costumer-icon">
-                            <use href="./images/symbol-defs.svg#icon-company-tagline"></use>
+                            <use href="./images/icons.svg#icon-company-tagline"></use>
                         </svg>
                     </a>
                 </li>
@@ -407,28 +407,28 @@
                 <li class="footer-list-item">
                     <a class="footer-net-link" href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank">
                         <svg class="footer-net-icon">
-                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                            <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="footer-list-item">
                     <a class="footer-net-link" href="https://www.twitter.com/" rel="noopener noreferrer" target="_blank">
                         <svg class="footer-net-icon">
-                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                            <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="footer-list-item">
                     <a class="footer-net-link" href="https://www.facebook.com/" rel="noopener noreferrer" target="_blank">
                         <svg class="footer-net-icon">
-                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                            <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="footer-list-item">
                     <a class="footer-net-link" href="https://www.linkedin.com/" rel="noopener noreferrer" target="_blank">
                         <svg class="footer-net-icon">
-                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                            <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                     </a>
                 </li>
