--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
         <li class="connect-item">
             <a class="connect-link list-link" href="maito:info@devstudio.com" lang="en">
                 <svg class="header-icons">
-                    <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                    <use href="./images/icons.svg#icon-envelope"></use>
                 </svg>
                 info@devstudio.com
             </a>
@@ -50,7 +50,7 @@
         <li class="connect-item">
             <a class="connect-link list-link" href="tel:+380961111111">
                 <svg class="header-icons">
-                    <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                    <use href="./images/icons.svg#icon-smartphone"></use>
                 </svg>
                 +38 096 111 11 11
             </a>
@@ -177,7 +177,7 @@
                         <a class="footer-net-link" href="https://www.instagram.com/" rel="noopener noreferrer"
                             target="_blank">
                             <svg class="footer-net-icon">
-                                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
@@ -185,7 +185,7 @@
                         <a class="footer-net-link" href="https://www.twitter.com/" rel="noopener noreferrer"
                             target="_blank">
                             <svg class="footer-net-icon">
-                                <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
@@ -193,7 +193,7 @@
                         <a class="footer-net-link" href="https://www.facebook.com/" rel="noopener noreferrer"
                             target="_blank">
                             <svg class="footer-net-icon">
-                                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
@@ -201,7 +201,7 @@
                         <a class="footer-net-link" href="https://www.linkedin.com/" rel="noopener noreferrer"
                             target="_blank">
                             <svg class="footer-net-icon">
-                                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
